Bugs fix